@@ -5,15 +5,17 @@ DIST Python-2.7.18.tar.xz 12854736 BLAKE2B 060a621c91dd8e3d321aec99d44c17aa67381
 DIST Python-3.7.7.tar.xz 17268888 BLAKE2B 5f16c9559249470a9e6c0aa686965e7d78ce0f7364b5d03fc9590613c7a5456f92835340e49bf9becbec18b18d1e5a6fc318b6e30f2349da3246a918cf8b05ff SHA512 ddc838a7b0c442c2e465616f20231f2b703ed6b69ed2dc17858aac8760814fdf7cff43d350d359300e47b6bb1f0bd38c31126b855e423a3a65ed06a8fa16d136
 DIST Python-3.7.8.tar.xz 17399552 BLAKE2B 4bf6c47b1132b6d31a79232002c4d38e2cd123ac05d52b21d6bfba5a4e19ec9130b8df8698d5ce6627e4297c4cf756643f036e694e36364c235306c72ef34bf8 SHA512 d2ba299e3cf8ed0f8fed9317f42bcd8d9af7e0e6175939b4be1be289c1658418bed17899e2608d762ffb15575021956cf6bf2054d7863c04b3bd7642f5b8c7ea
 DIST Python-3.7.9.tar.xz 17389636 BLAKE2B 484833aa2aa4e29051a02969294f72099ff6f1a47d944b1a0dd15f8e6c22a0406d551bcbcd1048cf89defedaccf060733211e34b38e31fd8391dd823eaa35bc0 SHA512 e4217b25529b5336e43b63d17f3758a8177a58184564cf02bd92a312f58dba9e096485c9e3cb3544f966e847ea15b3ab30ed065d28a6ca52a6d7e0faddf7d9f9
+DIST python-gentoo-patches-2.7.18-r4.tar.xz 21352 BLAKE2B d322f5afd63813d7c9280c75f942bde75ee19793e121d0406c4f229ead53324bf3996342eed9a6c1aa474894afe7f2dd70aec38aee8042993a5274abc288fd31 SHA512 1cb0be8e79d0c6c55fcbe3f3dabf8b760aea0e60d888ea39d3e69de03b55738c50b2cca06586c1cd2896956f5764eefd6d3f9fbf2de0d0ddfd8aab86837976b6
 DIST python-gentoo-patches-2.7.18.tar.xz 15012 BLAKE2B f691e231c793bb8f11fb64c89b90e022af8e0fe0e28839822c2ae6214fdab6c6fd9c07466c4b5797d3964b7db09fd979597774fb7872dc674e8df59321b6bf95 SHA512 a2952b27bfc0a52f322b2f3e177cbe09fa288c9ca5967c13fb9c2d45d3e81033407e30e86bdaaaa258f0b3cfa2cef6eda5502bddb6390f9512a493d145d34e03
 DIST python-gentoo-patches-3.7.7.tar.xz 14644 BLAKE2B 1a377eac945310082ec9fa257bcb406c7eaf24b5e80469dd49e82a1bc0554b75394678609cae447cb0fc7a19059b29166bf110b6ed99a89a9919b3a56a323f87 SHA512 2c7fbcefd6f4d1674b78f3b67f2be3f1b168e08c318fefe8d4757f2d30c22477f5010ad6f2c0abb265d819ee667617f21f93e002242e216b4ee570200b0ddf74
 DIST python-gentoo-patches-3.7.8.tar.xz 10304 BLAKE2B dc1bff35bdf3f7e97d15fbd0af4c3278ea54b43cb204641f666293dec507431987445fe6ecb991814842b8c58c65a6185b4c24e3ae08d682ef98916263af7cd4 SHA512 5871121e514dd6af4d9298550a5e01ee114950fd6db58bb8bdb879ede602a228f64d7bf8f6e04317ababc42a502b1192f4a010122745d5a8bc7a40866106479a
 DIST python-gentoo-patches-3.7.9-r1.tar.xz 15664 BLAKE2B 271b95a52f4ba83c1aee6f68385462c9af8f2ab575267ac068a793e99f7c9739eb4b98dfa7e9280510a709557d418db04f26b5b31bbfe95dfdc13c1773510d2d SHA512 38df628de2f2835f975f6f06395d32cd63051af87b9bf8b06eef2f987bde26a883923bcab333568c122554b900bb17995a8c7290b6a58f942bd942dcbc70d030
 DIST python-gentoo-patches-3.7.9.tar.xz 10588 BLAKE2B f60c8500671e7e3977412474c838905846e0609a7fdac787f2c6a8bfa53c887dcfd3466c5276772ffb8c20205e8b3f207f7d148c04524f19d095964b519da62d SHA512 11f411eb2d59fd45fbd80bdb1d1a83d413770779244045006942c5cb84837cba606673bcde102ae03b1d4579f526b551c93a64d39dba530b4584ba8dd8e9f13e
 EBUILD python-2.7.18-r100.ebuild 12236 BLAKE2B 3a9c60b953bbf33e762ea29c207dab3c6dea3d6fffc6c388fcf2c726bd3745a514d8c069f8e2853a137bf30c193806422ef46c624e58e0dc4b1a875bb28c39d3 SHA512 b075978f095aa91a964eb5e8ae63076bf956d17c07384769bfee8ac30306242537a27eb90f9c9ed2b70aea7fc8766f948ebcb682fa2b4c6c8e5c34ee1a724ee7
+EBUILD python-2.7.18-r101.ebuild 12396 BLAKE2B 96a8b4be8e3e70a8b68efe2733943076f9fb6f76245e30e311b5d7df1761b334ab452ac6b0560e826daaa846b7a5b01a1bd641d6b0ae0fe0d2b9784d0cbf0a23 SHA512 11ac9f2f2fcd36293332cecfd20de3e7b05fb142ce50e6d27f2de9c282aeccf272749da2809ec0e9c3830e7c4185483200ebc4a468274e5b33e8d7e20cf8da97
 EBUILD python-3.7.7-r2.ebuild 9982 BLAKE2B 7e8f9bdb4c11d673b9d626a66dc3babece5470f2df471cfb299ce54f5af35f441ed38c51c6a11c3746e3d751170198e5be9c17cb442a0c5d17dc14935e888cbf SHA512 fbff584b2e278cbcb87819d08c6e7f4175b1c83ae28cf79cddb70a9efc996a25303c76ee95ce927e8e392ee7e02c207a2709f0e5f5b46dfd015a5337f8084d3e
 EBUILD python-3.7.8-r2.ebuild 9902 BLAKE2B b9628bfacda6887dfbbf49f8ade319e6e75421e9b2ae3d0f0163670889eedf7d4b566ce3602566e906a2f23b4f50f060953d63004f4466306d0f79a86d64e51c SHA512 fc8c6ca42c0cd78d86799bb19627e31fd2ef1e31bce157e529e04f2e916e5db9bb47e9d87962215a866d3b24ec103600fda993681180f3117b0e36b7688293b5
 EBUILD python-3.7.9-r1.ebuild 9992 BLAKE2B bb4b26f9ec770d64dfa600267ef3ead9dc874dda49b56a9540ef5f4a152991c2bc73297fc93fe6527b0eda488937c994997cb27d4b17f86378d47cf522a55f76 SHA512 e3bf81e589764b79d8adcf26f0ba02395bb329cbd7422ba043303d376daf4796d60935cfc1471419f6022862a020c2ec103406c3f7935e2e495f4f5839ff9519
 EBUILD python-3.7.9.ebuild 9905 BLAKE2B 35fdaeb7d63e83b5dc64db14f8588aa86dfbddd52a5d855f7996b4c31e51cf0ab17c81809f1d69b1e4ef65c318826fb27f2ac7596c319d4c2b9061973250df44 SHA512 1d58fa66bb3ab5eddb1fc740a2344d4dbca0d19ea1dccef14087110c54aaf06d8d1eaf0a6b96271a0bf8f2472afa01f47650acc1f299fee6c4aad5820b8aa723
-MISC ChangeLog 939 BLAKE2B b5679c4730b34da654c2e7475ce293065c5c6a522a50f3ff5edbe48399b9fc182d5a0dc98bedff13cd26c4a1189676f3997d830bf10d2c25f54796f976c5d896 SHA512 51fb3ef15e4bcea3ead46445971ffa475532ab6995704198d75434c6e8d56d5d1be5d3bf36a648858e56ff84499a65fb939a6db7982882b6c11ab4072b926935
+MISC ChangeLog 1066 BLAKE2B 646472f46c367799696dc4aba6ff8a7621b5a244dfc0ede208e82df925455ce72cf3ab172a0d4b2b9a9dffd3de184d21f8999e8a7c4a72ae456c8ab45048bd1f SHA512 e02b2c548dc39702c7fa00f0598f32cb3f1c2b2d353a6478fecd0039d457cb86b596b4c73cacdd8ca1c1ba922666cd9629071ac64dce1c11546237be74963a2f
 MISC metadata.xml 819 BLAKE2B 120c7c65d77488e726c5a0f4aa19469867ea6900e747169fae2f9cf8f14ec2936089d5edfe1935ce610bec26387273e261b1cc4b023680c8c4b229f2141a7223 SHA512 08f45707e5490067a21951b9d37c8ae67064ab67cccc5b8d8c204eab8d4a004fb910627b62989c67b849b89d301618f8f8f7996e99e1ef5bab38a239c49c124d
